# LaCrema-FASTAPI-version

./: .env.local  .env.local.api_test  .env.local.migrations  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.api-test.yaml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: bbf82a79363e_initial_migration.py
api_tests/: conftest.py  test_healthcheck_api.py
restaurantservice/: app.py  database.py  settings.py
restaurantservice/apis/: auth.py  errors.py  healthcheck.py  token_backend.py  user_api.py  utils.py
restaurantservice/models/: __init__.py  base_model.py  employee_info_model.py  token_model.py  user_model.py
restaurantservice/repositories/: abstract_reposiitory.py  errors.py  sqlalchemy_repository.py
restaurantservice/services/: abstract_service.py  app_health_service.py  errors.py  user_service.py
tests/: conftest.py  test_app_health_service.py  test_sqlalchemy_repository.py  test_user_service.py
